# docker-compose-py

./: .pre-commit-hooks.yaml  Makefile  README.md  setup.cfg  update_version.sh
.github/workflows/: main.yml
spec/: tool-docker-compose-py-wrapper.md
tests/: test_docker_compose.py
