[metadata]
name = docker-compose-py
version = 5.3.1.0
description = Python wrapper around invoking the Docker Compose CLI (https://github.com/docker/compose)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neeve-ai/docker-compose-py
author = oss-robin
license = Apache License Version 2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.11
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [docker-compose]
    group = docker-compose-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/docker/compose/releases/download/v5.3.1/docker-compose-linux-x86_64
    sha256 = f9ebc6ebdb19d769b793c245a736caaeb198c62587f13b25c660c13b4987f959
    [docker-compose]
    group = docker-compose-binary
    marker = sys_platform == "linux" and platform_machine == "aarch64"
    url = https://github.com/docker/compose/releases/download/v5.3.1/docker-compose-linux-aarch64
    sha256 = aa611e811d0ea25897839c404bfb5bf93ce706dc51c500a4457890f5d0606a86
    [docker-compose]
    group = docker-compose-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    url = https://github.com/docker/compose/releases/download/v5.3.1/docker-compose-darwin-x86_64
    sha256 = 56620a2e87e789147b9b1cc5d37eeecec2332e2cdf5c2d58a68f999f2dc416ca
    [docker-compose]
    group = docker-compose-binary
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/docker/compose/releases/download/v5.3.1/docker-compose-darwin-aarch64
    sha256 = 32691ba1196d819fa68cbdc0aad9a5569e730a35ae40c6fdd8458110ecd69488
    [docker-compose.exe]
    group = docker-compose-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    url = https://github.com/docker/compose/releases/download/v5.3.1/docker-compose-windows-x86_64.exe
    sha256 = 6d36cc701393c066d67ebc77773b718d8c738bc4ccb350fbf1dc0e6a09f44cb9
    [docker-compose.exe]
    group = docker-compose-binary
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    url = https://github.com/docker/compose/releases/download/v5.3.1/docker-compose-windows-aarch64.exe
    sha256 = 5871699d19ee22904f7d1a7ce7e9e6b5a582f6cf9286afd0117ad601cc6737d6
